htm1 and style1

--- a/1_htm.html
+++ b/1_htm.html
@@ -1,13 +1,14 @@
 <html>
 <head>
 <title>
-  Ie990720exercise  
+  Ie13990806exercise  
 </title>
+<link rel="stylesheet" type="text/css" href="s1.css" >
 </head>
 <body>
   
 <h1>About Internet Engeenering</h1>
-<p>Internet engineering blends electrical and computer engineering with computer science and information systems.
+<p class="test">Internet engineering blends electrical and computer engineering with computer science and information systems.
   <br /> 
   As an Internet engineer, you would design, develop, and implement network and communication systems, Internet systems, and software applications.
   <br />
@@ -31,7 +32,7 @@
 </p>
 
 <h2><li>Computer Network</li></h2>
-<p>
+<p id = "box">
   A <b>computer network</b> is a group of computers that use a set of common communication protocols over digital interconnections for the purpose of sharing resources located on or provided by the network nodes.
   <br />The interconnections between nodes are formed from a broad spectrum of telecommunication network technologies, based on physically wired, optical, and wireless radio-frequency methods that may be arranged in a variety of network topologies.
   <br />The recommendation X.200 describes seven layers, labelled 1 to 7. Layer 1 is the lowest layer in this model.
